# NfWebCrypto

./: .cproject  .gitignore  .project  CMakeLists.txt  README.md  TODO.md
base/: Base64.cpp  Base64.h  CMakeLists.txt  CadmiumErrors.cpp  CadmiumErrors.h  ConditionVariable.cpp  ConditionVariable.h  DebugUtil.h  IDeviceInfo.h  JSONFormatter.cpp  JSONFormatter.h  Mutex.cpp  Mutex.h  Noncopyable.h  ScopedMutex.h  SimpleThread.cpp  SimpleThread.h  StaticAssert.h  Variant.cpp  Variant.h  tr1.h
base/cJSON/: CMakeLists.txt  cJSON.c  cJSON.h
cmake/toolchains/: linux32nflx.cmake  linux64.cmake  linux_nacl.cmake  linux_pnacl.cmake
cmake/toolchains/common/: common.cmake  linux_common.cmake
crypto/: AesCbcCipher.cpp  AesCbcCipher.h  AesGcmCipher.cpp  AesGcmCipher.h  AesKeyWrapper.cpp  AesKeyWrapper.h  BigNum.cpp  BigNum.h  CMakeLists.txt  CadmiumCrypto.cpp  CadmiumCrypto.h  CadmiumCryptoImpl.cpp  CadmiumCryptoImpl.h  DiffieHellmanContext.cpp  DiffieHellmanContext.h  DigestAlgo.cpp  DigestAlgo.h  Digester.cpp  Digester.h  HMAC.cpp  HMAC.h  IKeyProvision.h  Key.cpp  Key.h  NtbaLog.h  NtbaUtil.cpp  NtbaUtil.h  OpenSSLException.cpp  OpenSSLException.h  OpenSSLLib.cpp  OpenSSLLib.h  Pbkdf2.cpp  Pbkdf2.h  RandTable.cpp  Random.cpp  Random.h  RsaContext.cpp  RsaContext.h  SampleKeyProvision.cpp  SampleKeyProvision.h  (+1 more)
crypto/test/: CMakeLists.txt  CadmiumCrypto_test.cpp
misc/desktop/: gdbinit  start.sh
plugin/: BackgroundDispatcher.cpp  BackgroundDispatcher.h  Base32.cpp  Base32.h  BrowserConsoleLog.cpp  BrowserConsoleLog.h  CMakeLists.txt  INativeBridge.h  MainThreadUtil.cpp  MainThreadUtil.h  NativeBridge.cpp  NativeBridge.h  PpInstance.cpp  PpInstance.h  PpModule.cpp  PpapiDeviceInfo.cpp  PpapiDeviceInfo.h  Version.h.in  nfwebcrypto.info
plugin/ppapi/: CMakeLists.txt
plugin/ppapi/ppapi/: glibc-x86-32-so.ppapi_gles2_lib.source_list.gypcmd  glibc-x86-64.ppapi_cpp_lib.source_list.gypcmd  newlib-x86-32.ppapi_proxy_untrusted.source_list.gypcmd  newlib-x86-32.ppapi_shared_untrusted.source_list.gypcmd  newlib-x86-64.ppapi_ipc_untrusted.source_list.gypcmd  newlib-x86-64.ppapi_nacl_tests.source_list.gypcmd  ppapi.Makefile  ppapi_c.target.mk  ppapi_cpp.target.mk  ppapi_cpp_lib.target.mk  ppapi_cpp_objects.target.mk  ppapi_egl.target.mk  ppapi_example.target.mk  ppapi_example_audio.target.mk  ppapi_example_audio_input.target.mk  ppapi_example_c_stub.target.mk  ppapi_example_cc_stub.target.mk  ppapi_example_enumerate_devices.target.mk  ppapi_example_file_chooser.target.mk  ppapi_example_flash_topmost.target.mk  ppapi_example_gamepad.target.mk  ppapi_example_gles2.target.mk  ppapi_example_graphics_2d.target.mk  ppapi_example_ime.target.mk  ppapi_example_input.target.mk  ppapi_example_mouse_cursor.target.mk  ppapi_example_mouse_lock.target.mk  ppapi_example_paint_manager.target.mk  ppapi_example_post_message.target.mk  ppapi_example_printing.target.mk  ppapi_example_scroll.target.mk  ppapi_example_simple_font.target.mk  ppapi_example_skeleton.target.mk  ppapi_example_url_loader.target.mk  ppapi_example_url_loader_file.target.mk  ppapi_example_vc.target.mk  ppapi_example_video_decode.target.mk  ppapi_gles2.target.mk  ppapi_gles2_lib.target.mk  ppapi_host.target.mk  (+15 more)
plugin/ppapi/ppapi/c/: ppb_graphics_3d.h
plugin/ppapi/ppapi/c/private/: ppp_instance_private.h
plugin/ppapi/ppapi/native_client/: nacl_ipc_irt.target.mk  nacl_irt.target.mk  nacl_irt_srpc.target.mk  native_client.Makefile  ppapi_lib.target.mk
plugin/ppapi/ppapi/native_client/src/shared/ppapi_proxy/: nacl_ppapi_browser.target.mk  newlib-x86-32.ppruntime_lib.source_list.gypcmd  ppapi_proxy.Makefile  ppapi_proxy_untrusted.Makefile  ppruntime_lib.target.mk
plugin/ppapi/ppapi/native_client/src/trusted/plugin/: plugin.Makefile  ppGoogleNaClPluginChrome.target.mk
plugin/ppapi/ppapi/native_client/src/untrusted/irt_stub/: glibc-x86-64.ppapi_stub_lib.source_list.gypcmd  ppapi_stub_lib.target.mk
plugin/ppapi/ppapi/native_client/src/untrusted/pnacl_irt_shim/: newlib-x86-32.pnacl_irt_shim.source_list.gypcmd  pnacl_irt_shim.target.mk
plugin/ppapi/ppapi/native_client/src/untrusted/pnacl_support_extension/: pnacl_support_extension.target.mk
plugin/ppapi/ppapi/utility/threading/: simple_thread.h.gch
web/: asnjwk.min.js  basic.html  chrome-nfcrypt.sh  manifest.nmf  nfcrypto-iframe.js  nfcrypto.js  nfcrypto_pnacl.js  nfcrypto_promise.js  nfwebcrypto.pexe  pluginloadstress.html  save_contents.php  test.html  test.webcrypto.js  test_promise.html  test_qa.html  test_w3c.html  web.csproj  webcrypto_stress.html
web/benchmark/: TestVectors.js  demo-tests.js  index.html  manifest.nmf  nfcrypto.js  nfwebcrypto.nexe  nfwebcrypto.pexe  nfwebcrypto.pre-finalized  test-array.js  util.js
web/jasmine/: jasmine.js
web/jsTests/: derive.js  digest.js  digest_optimized.js  encryptdecrypt_optimized.js  encryptdecryptaes.js  encryptdecryptrsa.js  generate.js  generatexportkey.js  getkey.js  importexport.js  importexportjwk.js  importexportpkcs8.js  importexportraw.js  importexportrsa.js  importexportspki.js  keywrapunwrap.js  mandatory_test.js  multithreaded.js  signverifyhmac.js  signverifyhmac_optimized.js  signverifyrsa.js  signverifyrsa_optimized.js  test.webcrypto.js  test.webcrypto_promise.js  test.webcrypto_w3c.js  test_minimum.js  utils.js
web/jsTests/stressTests/: digest_stress.js  encryptdecrypt_stress.js  jquery-1.4.2.min.js  keywrapunwrap_stress.js  signverify_stress.js
web/resources/: testharness.js
